<resources>
    <string name="app_name">E-Busantara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_welcome">Welcome!</string>
    <string name="str_welcome_description">E-Busantara is a online booking service for Bus transportation. login now to user E-Busantara services.</string>
    <string name="str_sign_up">Sign up wth google</string>
    <string name="str_almost_there">Almost there</string>
    <string name="str_setup_description">Fill your phone number below, so we can easily catch you up.</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_your_phone_numbers_here">Your phone numbers here</string>
    <string name="str_save_number">Save Number</string>
    <string name="str_todo_back_button">Back Button</string>
    <string name="str_todo_image_illustrator">Image Illustrator</string>
    <string name="str_finish_description">You’re all set and ready to use E-Busantara. Enjoy our service!</string>
    <string name="str_take_me_to_e_busantara">Take me to E-Busantara</string>
    <string name="str_everything_s_up">Everything’s up!</string>
    <string name="str_title_sliding">Select how much passenger</string>
    <string name="str_sliding_description">Older than 2 years old should buy a seat</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_select">select</string>
    <string name="str_passenger">passenger</string>
    <string name="str_departure">Departure</string>
    <string name="str_arrival">Arrival</string>
    <string name="str_passengers">Passengers</string>
    <string name="str_default_ppl">1 ppl</string>
    <string name="str_date">Date</string>
    <string name="str_search_bus">Search Bus</string>
    <string name="str_nearby">Nearby</string>
    <string name="str_departure_date">Departure date</string>
    <string name="str_try_departure">Try “Jakarta”</string>
    <string name="str_try_arrival">Try “Cianjur”</string>
    <string name="str_ppl">1 ppl</string>
    <string name="str_select_date">Select date</string>
    <string name="str_departure_locations">Departure Locations</string>
    <string name="str_arrival_locations">Arrival Locations</string>
    <string name="str_todo_rating_of_item">Rating of item</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_default_count">0</string>
    <string name="str_label_seat">/seat</string>
    <string name="str_book_now">BOOK NOW</string>
    <string name="str_subtotals">1 x 0</string>
    <string name="str_bus_details">Bus details</string>
    <string name="str_default_ratings">0.0/5</string>
    <string name="str_see_picture">See picture</string>
    <string name="str_bus_no">Bus No.</string>
    <string name="str_class">Class</string>
    <string name="str_available_seat">Available seat</string>
    <string name="str_toilet">Toilet</string>
    <string name="str_rest_stop">Rest stop</string>
    <string name="str_luggage">Luggage</string>
    <string name="str_ac">AC</string>
    <string name="str_facility">Facility</string>
    <string name="str_choose_seats">Choose seats</string>
    <string name="str_your_seat">Your seat</string>
    <string name="str_booked">Booked</string>
    <string name="str_available">Available</string>
    <string name="str_a">A</string>
    <string name="str_b">B</string>
    <string name="str_c">C</string>
    <string name="str_d">D</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_10">10</string>
    <string name="str_complete_booking">Complete booking</string>
    <string name="str_continue_to_payment">CONTINUE TO PAYMENT</string>
    <string name="str_personal_information">Personal Information</string>
    <string name="str_name">Name</string>
    <string name="str_seats">Seats</string>
    <string name="str_payment_information">Payment Information</string>
    <string name="str_po_name">PO Name</string>
    <string name="str_estimated_time">Estimated time</string>
    <string name="str_seat_no">Seat no.</string>
    <string name="str_unique_code">Unique code</string>
    <string name="str_total">Total</string>
    <string name="str_payment">Payment</string>
    <string name="str_payment_method">Payment Method</string>
    <string name="str_credit_card">Credit card</string>
    <string name="str_select_payment">SELECT</string>
    <string name="str_retail_payment">Retail payment</string>
    <string name="str_total_payment">Total payment</string>
    <string name="str_payment_description">please select one of the payment method below</string>
    <string name="str_card_number">Card number</string>
    <string name="str_hide_number">**** **** **** ****</string>
    <string name="str_valid_until">Valid until</string>
    <string name="str_month">Month</string>
    <string name="str_year">Year</string>
    <string name="str_card_holder">Card holder</string>
    <string name="str_surname">Surname</string>
    <string name="str_vcc">VCC</string>
    <string name="str_credit_description">Last three digit on your card</string>
    <string name="str_verify_payment">VERIFY PAYMENT</string>
    <string name="str_bank_transfer">Bank transfer</string>
    <string name="str_bni_mobile_banking">BNI Mobile banking</string>
    <string name="str_cimb">CIMB Niaga Mobile banking</string>
    <string name="string_bank_steps">1. Select transfer\n2. In sub menu select virtual account transfer\n3. Type this number in the field</string>
    <string name="str_bank_steps_second">4. After you press continue, input this number to the transfer amount field.</string>
    <string name="str_steps_third">5. Dont forget to keep the receipt for verification process.</string>
    <string name="str_retail_steps">1. Ask the cashier for Online payment\n2. When you asked what Payment, answer E-Busantara.\n3. The cashier will ask what is your booking code. Here is your booking code</string>
    <string name="str_retail_steps_second">4. You’re gonna be charged as much as the total payment. (as you can see in this header).\n5. Keep the receipt, in case you’re having problem with payment verification.</string>
    <string name="str_sort_by_best_experience">Sort by Best experience</string>
    <string name="str_error">Error</string>
    <string name="str_oops">Oops!</string>
    <string name="str_error_description">You don’t have any ticket yet. Please order first.</string>
    <string name="str_book_a_trip">Book a trip</string>
    <string name="str_2_x_2_seats_arrangement">2 x 2 Seats arrangement</string>
    <string name="str_0_seat_are_available">0 Seat are available</string>
    <string name="str_schedule">Schedule</string>
    <string name="str_image_profile">image profile</string>
    <string name="str_cianjur">Cianjur</string>
    <string name="str_ticket_status">Ticket Status</string>
    <string name="str_ticket_detail">Ticket Detail</string>
    <string name="str_rating">0/5</string>
    <string name="str_alfamart_payment_code">Alfamart payment code</string>
    <string name="str_your_qr_code">Your QR Code</string>
    <string name="str_setting">Setting</string>
    <string name="str_about">About</string>
    <string name="str_kontributor">Kontributor:</string>
    <string name="str_mitra">Kampus Merdeka Hacktiv8</string>
    <string name="str_team_member_2">Team Member 2</string>
    <string name="str_kon1">Amri Marihot Jati</string>
    <string name="str_univ1">STIE Indonesia Banking School</string>
    <string name="str_portofolio1">\@amrimarihotjati</string>
    <string name="str_portofoliourl1">https://github.com/amrimarihotjati</string>
    <string name="str_kon2">Nuryadin Abutani</string>
    <string name="str_univ2">Sekolah Tinggi Teknologi Bandng</string>
    <string name="str_portofolio2">\@nuryadincjr</string>
    <string name="str_portofoliourl2">https://github.com/nuryadincjr</string>
    <string name="str_about_description">Online booking service for Bus transportation</string>
    <string name="str_how_was_your_trip">How was your trip?</string>
    <string name="str_you_ve_been_complete_your_trip_with_this_detail">You\'ve been complete your trip with this detail</string>
    <string name="str_please_give_your_rating">Please give your rating</string>
    <string name="str_describe">Describe your experience (optional)</string>
    <string name="str_report">Report</string>
    <string name="str_delete">Delete</string>
    <string name="str_edit">Edit</string>
    <string name="str_search">Search</string>
    <string name="str_my_ticket">My Ticket</string>
    <string name="str_notifications">Notifications</string>
    <string name="str_profile">Profile</string>
    <string name="str_rate_this_bus">Rate this bus!</string>
    <string name="str_tell_other_what_you_think">Tell other what you think</string>
    <string name="str_0_500">0/500</string>
    <string name="str_rate_this_trip">Rate This Trip</string>
    <string name="str_enjoy_it">Enjoy it!</string>
    <string name="info_enjoy">We will always provide the latest information for you.</string>
    <string name="str_tickets">Tickets</string>
    <string name="str_give_your_best_review">Give your best review..</string>
    <string name="str_more">More</string>
    <string name="str_riau">Riau</string>
    <string name="str_your_tickets">Your Tickets</string>
    <string name="str_logout">Logout</string>
    <string name="str_selected_0_0">Selected: 0/0</string>
    <string name="str_partner_logo">Mitra Logo</string>
    <string name="str_apply">Apply</string>
    <string name="web_client_id">674799976836-45jshh39rniiqjb2v9jo9ruev362obqt.apps.googleusercontent.com</string>
</resources>