<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/ivBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/str_todo_back_button"
                android:src="@drawable/ic_back_arrow"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/ivBrand"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/str_choose_seats" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/layoutSeatChooser"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/layout_seats_chooser"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/e8"
        android:orientation="vertical"
        android:paddingLeft="@dimen/p20"
        android:paddingTop="@dimen/p10"
        android:paddingRight="@dimen/p20"
        android:paddingBottom="@dimen/p10">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_selected_0_0"
            android:textColor="@color/primary_light"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/p10"
            android:layout_marginBottom="@dimen/p20"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/str_your_seat"
                app:drawableStartCompat="@drawable/ic_ellipse"
                tools:ignore="NestedWeights,TextContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/str_booked"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_ellipse"
                app:drawableTint="@color/gray_64" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/str_available"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_ellipse"
                app:drawableTint="@color/gray_ed" />
        </LinearLayout>

        <Button
            android:id="@+id/btnBookNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_btn"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/str_book_now"
            android:textSize="@dimen/s12"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>